Primeros Views para modificar los Boxes.

--- a/Android/IFS Generator/res/layout/main.xml
+++ b/Android/IFS Generator/res/layout/main.xml
@@ -1,21 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-      android:orientation="horizontal"
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_weight="1">
-      <com.niko78.IFSGenerator.Views.IFSView
-          android:gravity="center_horizontal"
-          android:background="#aaaa00"
-          android:layout_width="wrap_content"
-          android:layout_height="fill_parent"
-          android:layout_weight="1"/>
-      <TextView
-          android:text="red"
-          android:gravity="center_horizontal"
-          android:background="#aa0000"
-          android:layout_width="300px"
-          android:layout_height="fill_parent"
-          android:layout_weight="1"/>
-  </LinearLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+	android:orientation="horizontal" 
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent" 
+	android:layout_weight="1">
+	<com.niko78.IFSGenerator.Views.IFSView
+	     android:id="@+id/ifsView"
+		android:gravity="center_horizontal" 
+		android:background="#aaaa00"
+		android:layout_width="wrap_content" 
+		android:layout_height="fill_parent"
+		android:layout_weight="1" />
+	<LinearLayout 
+		android:layout_width="250dp" 
+		android:id="@+id/linearLayout1"
+		android:layout_height="match_parent" 
+		android:layout_weight="1"
+		android:orientation="vertical">
+		<TableLayout 
+			android:layout_width="fill_parent" 
+			android:layout_height="fill_parent"
+			android:stretchColumns="1" android:weightSum="1">
+			<View android:layout_height="2dip" android:background="#FF909090" />			
+			<TableRow>
+				<TextView 
+				android:text="PosX:" 
+				android:textSize="10sp" 
+				android:paddingLeft="3dp"
+				android:gravity="center_vertical" 
+				/>
+				<EditText 
+					android:inputType="numberDecimal" 
+					android:id="@+id/edPosX"
+					android:layout_width="wrap_content"
+					android:layout_height="30sp"
+					android:textSize="10sp" 
+					android:singleLine="true" 
+					/>
+			</TableRow>
+			<TableRow>
+				<TextView 
+				android:text="PosY:"
+				android:textSize="10sp" 
+				android:paddingLeft="3dp"
+				android:gravity="center_vertical" 
+				/>
+				<EditText 
+					android:inputType="numberDecimal" 
+					android:id="@+id/edPosY"
+					android:layout_width="wrap_content"
+					android:layout_height="30sp"
+					android:textSize="10sp" 
+					android:singleLine="true"
+					/>
+			</TableRow>
+			<View android:layout_height="2dip" android:background="#FF909090" />			
+			<TableRow>
+				<TextView 
+				android:text="Ancho:" 
+				android:textSize="10sp" 
+				android:paddingLeft="3dp"
+				android:gravity="center_vertical" 
+				/>
+				<EditText 
+					android:inputType="numberDecimal" 
+					android:id="@+id/edWidth"
+					android:layout_width="wrap_content"
+					android:layout_height="30sp"
+					android:textSize="10sp" 
+					android:singleLine="true" 
+					android:gravity="center_vertical"
+					/>
+			</TableRow>
+			<TableRow>
+				<TextView 
+				android:text="Alto:" 
+				android:textSize="10sp" 
+				android:paddingLeft="3dp"
+				android:gravity="center_vertical" 
+				/>
+				<EditText 
+					android:inputType="numberDecimal" 
+					android:id="@+id/edHeight"
+					android:layout_width="wrap_content"
+					android:layout_height="30sp"
+					android:textSize="10sp" 
+					android:singleLine="true" 
+					/>
+			</TableRow>			
+            <Button android:id="@+id/btnApply"
+                android:paddingTop="10dp" 
+            	android:text="Apply"
+            	android:textSize="10sp"
+            	android:layout_width="wrap_content" 
+            	android:layout_height="40sp" 
+            	/>			
+		</TableLayout>
+	</LinearLayout>
+</LinearLayout>
