Recoder and runeable.

--- a/Android/HelloAudioRecoder/res/layout/main.xml
+++ b/Android/HelloAudioRecoder/res/layout/main.xml
@@ -5,8 +5,15 @@
     android:layout_height="fill_parent"
     >
 <TextView  
+    android:id="@+id/texTitle"
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
-    android:text="@string/hello"
+    android:text="Hello Audio Record"
+    />
+<Button
+    android:id="@+id/btnMinBuffer"
+    android:text="Get Min Buffer Size"
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content"
     />
 </LinearLayout>
